# vulkan_grapher

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  style.css
docs/: DevNotes.md
shaders/: compile.sh  pbr.frag  pbr.vert  pbr2.frag  pbr2.vert  shader.vert  wireframe.vert
src/: CMakeLists.txt  application.cpp  application.h  imgui_vulkan_data.cpp  imgui_vulkan_data.h  main.cpp  vertex.h  vulkan_debug.h  vulkan_helper.h  vulkan_objects.h  vulkan_wrapper.cpp  vulkan_wrapper.h
src/app/: CMakeLists.txt  app_state.h
src/dev/: CMakeLists.txt  glm_test.cpp  iceoryx2_test.cpp  mathpresso_test.cpp  mesh_test.cpp
src/imgui/: CMakeLists.txt
src/mesh/: CMakeLists.txt  function_mesh.cpp  function_mesh.h  gmsh_wrapper.cpp  gmsh_wrapper.h  mesh.h  mesh_debug.h  mesh_util.h  uniforms.h  user_function.h  util.h  vertex.h
src/vulkan/: app_state.h  vulkan_debug.h
src/vulkan_util/: CMakeLists.txt  app_state.h  shader_util.h  vulkan_debug.h  vulkan_helper.h  vulkan_objects.h
